# 100-Days-of-Rust

./: .gitignore  readme.md
Day-2-temperature-converter/: Cargo.toml
Day-3-simple-calculator/: Cargo.toml
Day-4-guessing-game/: Cargo.toml
Day-5-word-counter/: Cargo.toml  sample.txt
Day-5-word-counter/src/: main.rs
Day-6-bmi-calculator/src/: main.rs
Day-7-palindrome-checker/: Cargo.toml
Day-7-palindrome-checker/src/: main.rs
day-01-hello/: Cargo.toml
day-02-temperature/src/: main.rs
day-03-calculator/src/: main.rs
day-08-fibonacci/: Cargo.toml
day-10-todo/: Cargo.toml  todos.json
day-11-timer/: Cargo.toml
day-12-rock-paper-scissors/: Cargo.toml
day-13-JSON-parser/: Cargo.toml
day-14-file-reader/: Cargo.toml
day-15-memory/: Cargo.toml
day-16-string-manipulation/: Cargo.toml
day-17-crud/: Cargo.toml
day-18-banking/: Cargo.toml
day-19-clap/: Cargo.toml
day-20-errors/: Cargo.toml
day-21-custom-error-calculator/: Cargo.toml
day-21-garden/: Cargo.toml
day-22-state-machine/: Cargo.toml
day-23-garden/: Cargo.toml
day-24-garden-errors/: Cargo.toml
day-25-garden-testing/: Cargo.toml
day-25-garden-testing/src/: lib.rs  main.rs
day-25-garden-testing/tests/: integration.rs
day-26-chat/: Cargo.toml
day-26-chat/src/: main.rs
day-26-garden-refactor/: Cargo.toml
day-27-logger/: Cargo.toml  log.txt
day-28-actix/: Cargo.toml
day-29-forms/: Cargo.toml
day-30-database/: Cargo.toml  readme.md
day-31-telemetry/: Cargo.toml
day-31-telemetry/src/: lib.rs  main.rs  startup.rs  telemetry.rs
day-31-telemetry/src/routes/: subscriptions.rs
day-31-telemetry/tests/: health_check.rs
day-32-test telemetry/: Cargo.toml
day-32-test-telemetry/: Cargo.toml  readme.md
day-33-deploy/: Cargo.toml
day-33-deploy/src/: configuration.rs  main.rs  startup.rs  telemetry.rs
day-33-deploy/src/routes/: subscriptions.rs
day-33-deploy/tests/: health_check.rs
day-34-tauri/: pnpm-lock.yaml
day-35-notes/: package.json  pnpm-lock.yaml
day-36-notes/: package.json  pnpm-lock.yaml
day-37-notes/: pnpm-lock.yaml
day-39-notes/: README.md  package.json  pnpm-lock.yaml
day-41-notes/: package.json  pnpm-lock.yaml
day-42-workshop/: Cargo.toml
day-43-workshop/: Cargo.toml
day-44-workshop/: Cargo.toml
day-45-workshop/: Cargo.toml
day-6-bmi/: Cargo.toml
flappy-bird/: Cargo.toml
(+111 files in other folders)
