[package]
name = "day-25-garden-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive", "env"] }
dialoguer = "0.12.0"
directories = "6.0.0"
edit = "0.1.5"
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = "4.2.3"
slug = "0.1.6"
tempfile = "3.24.0"
thiserror = "2.0.18"
