[package]
name = "day-26-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = { version = "0.12.0", features = ["history"] }
dotenv = "0.15.0"
miette = { version = "7.6.0", features = ["fancy"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
