[package]
name = "day-33-deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
config= "0.14"
uuid= { version= "1", features = ["v4"] }
chrono = { version= "0.4.22", default-features = false, features = ["clock"] }
env_logger= "0.9"
log= "0.4"
tracing= { version= "0.1", features = ["log"] }
tracing-subscriber= { version= "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter= "0.3"
tracing-log= "0.2"
secrecy = { version= "0.8", features = ["serde"] }
tracing-actix-web= "0.7"

[dev-dependencies]
reqwest = "0.13.2"

[dependencies.sqlx]
version= "0.8"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
